--- a/luci-app-turboacc/po/zh-cn/turboacc.po
+++ b/luci-app-turboacc/po/zh-cn/turboacc.po
@@ -43,8 +43,8 @@ msgstr "使用全锥形 NAT 可以有效提升游戏体验"
 msgid "IPv6 Full Cone NAT"
 msgstr "IPv6 全锥形 NAT"
 
-msgid "Enabling IPv6 Full Cone NAT adds an additional layer of NAT. In the case of IPv6, if you acquire an IPv6 prefix through IPv6 Prefix Delegation, each device can be assigned a public IPv6 address, eliminating the need for IPv6 Full Cone NAT."
-msgstr "启用IPv6的全锥形NAT会增加了一层NAT。对于IPv6来说，如果通过IPv6前缀代理(IPv6-PD)获取到了IPv6前缀，则本身每个设备都可以分配一个公网IPv6地址，无需开启IPv6全锥形NAT。"
+msgid "Enabling IPv6 Full Cone NAT adds an extra layer of NAT to IPv6. In IPv6, if you obtain an IPv6 prefix through IPv6 Prefix Delegation, each device can be assigned a public IPv6 address, eliminating the need for IPv6 Full Cone NAT."
+msgstr "启用IPv6的全锥形NAT会给IPv6增加一层NAT。对于IPv6来说，如果通过IPv6前缀代理(IPv6-PD)获取到了IPv6前缀，则本身每个设备都可以分配一个公网IPv6地址，无需开启IPv6全锥形NAT。"
 
 msgid "Running Status"
 msgstr "运行状态"
